<resources>
    <string name="pref_default_usb_connection_baud_rate">115200</string>
    <string name="pref_default_usb_connection_data_bits">8</string>
    <string name="pref_default_usb_connection_parity">0</string>
    <string name="pref_default_usb_connection_stop_bits">1</string>
    <string name="pref_default_usb_connection_flow_control">0</string>
    <string name="pref_default_usb_connection_filter">^/dev/bus/usb/</string>

    <string name="app_name">Serial Connector</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="usb_connections_header">USB connection</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>